Changes in Version 1.6.3
  - forcePD now defaults to FALSE in cor_auto

Changes in Version 1.6.3
  - Updated warning message for when the densest network is selected.
  - Added an option countDiagonalPars to ggmFit to count diagonal of the network as parameters, now set to TRUE by default.
  - Added support for drawing confidence regions using pie charts with the following arguments:
    - pieCImid, pieCIlower, pieCIupper, pieCIpointcex, pieCIpointcex
  - Fixed a bug with clusteringTable and clusteringPlot
  - Fixed a bug with fade not working as matrix/vector when edge.colors are used
  
Changes in Version 1.6.2
  - Fixed a bug in centralityPlot

Changes in Version 1.6.1
  - EBIC computation now uses the number of variables in the extra penalty, as opposed to the number of cases.
  - Removed old spelling errors left in for backward competability. The argument 'graph' must now be "cor" or "pcor"
  - Added three more AIC alternatives (thanks to Erikson Kaszubowski)
  
Changes in Version 1.6
  o Major changes:
      o Removed several dependencies in order to start taking qgraph out of dependency hell:
          o The following functions have been *removed*:
              - qgraph.pca
              - qgraph.cfa
              - qgraph.sem
              - qgraph.semModel
              - qgraph.lavaan
              - qgraph.panel
              - qgraph.svg
              - qgraph.efa
          o The following functionality has been *removed* from qgraph:
              - tooltips
              - overlay
              - overlaySize
    o The Fruchterman Reingold layout has been changed. These changes *will* lead to a different 
      layout to be returned now, but should prevent such disrepancies in the future.
        - The function has been translated from C to C++ using Rcpp
        - Results are now rounded in the algorithm. This should lead to more consistency in its results
    o centralityPlot now only shows node degree or strength by default